name:                Titim
version:             0.1.0.0
synopsis:            Game for Lounge Marmelade
description:         Game for Lounge Marmelade
license:             GPL-3
license-file:        LICENSE
author:              Jefffrey
maintainer:          notjefff@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

source-repository head
    type:       git
    location:   https://github.com/Jefffrey/Titim.git

executable Titim
    main-is:            Main.hs
    build-depends:      base >= 4.7 && < 4.8,
                        random >= 1.1 && < 1.2,
                        vector >= 0.10 && < 0.11
    hs-source-dirs:     src
    default-language:   Haskell2010
